--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,15 @@
 @import 'libs/bootstrap-reboot.min';
-@import "base/mixins", "base/variables";
+@import 'base/mixins', 'base/variables';
 
 * {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
 }
+
+.container {
+    margin: 0 auto;
+    max-width: 100%;
+}
+
+@import 'blocks/promo', 'blocks/about'
