--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,4 +12,4 @@
     max-width: 100%;
 }
 
-@import 'blocks/promo', 'blocks/about'
+@import 'blocks/promo', 'blocks/about', 'blocks/audioplayer', 'blocks/mybio';
