--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -1,22 +1,22 @@
 .about {
     .holder {
-        min-width: 100%;
-        min-height: 50%;
+        display: block;
+        height: 50%;
         background: rgb(13, 13, 13) url('https://s3.envato.com/files/102898187/full.png') center center no-repeat;
     }
-
-    // width: 100vw;
-    height: 100vh;
 
     &-grid {
         @include white_bg;
         display: grid;
         margin: 0 auto;
-        max-width: 100%;
-        max-height: 50%;
-        grid-template: repeat(1, minmax(50%, 100%)) / repeat(2, minmax(50%, 100%));
+        grid-template: repeat(1, 700px) / repeat(2, 1fr);
         grid-auto-rows: auto;
         grid-auto-columns: auto;
+
+        @media (max-width:725px) {
+            grid-template: repeat(2, auto) / repeat(1, 1fr);
+
+        }
 
         &__photo {
             width: 100%;
@@ -24,7 +24,7 @@
 
             img {
                 display: block;
-                object-fit: cover;
+                object-fit: fill;
                 border-radius: 0px;
                 width: 100%;
                 height: 100%;
@@ -35,15 +35,27 @@
 
         &__wrapper {
             margin: 100px 0 0 100px;
+            line-break: anywhere;
+
+            @media (max-width:1140px) {
+                margin: 50px 0 0 50px;
+
+            }
+
+            @media (max-width:725px) {
+                margin: 50px 50px;
+
+            }
+
         }
 
         &__title {
-            font-size: calc(26px + 16 * (50vw / 1440))
+            font-size: calc(12px + 16 * (100vw / 1440));
         }
 
         &__descr {
             margin-top: 40px;
-            font-size: calc(12px + 8 * (50vw / 1440))
+            font-size: calc(9px + 8 * (100vw / 1440));
         }
 
         &__social {
@@ -64,7 +76,7 @@
                     width: 36px;
 
                     .vk {
-                        margin-top: 6px;
+                        margin-top: 2px;
                         display: block;
                     }
 
