--- a/src/sass/blocks/_mybio.scss
+++ b/src/sass/blocks/_mybio.scss
@@ -1,22 +1,25 @@
 .mybio {
     background: $black url('https://stihi.ru/pics/2016/07/22/5312.jpg') center center / cover no-repeat;
-    height: 100vh;
+    // height: 100vh;
 
     &-wrapper {
         margin: 0 auto;
-        max-width: 1140px;
+        max-width: 1160px;
         text-align: center;
         color: $white;
 
         &__title {
             padding-top: 150px;
-            font-size: 36px;
+            font-size: calc(20px + 16 * (100vw / 1440));
+            ;
         }
 
         &__descr {
             margin-top: 100px;
-            font-size: 20px;
+            font-size: calc(14px + 6 * (100vw / 1440));
             text-align-last: left;
+            line-break: anywhere;
+            padding: 20px;
         }
     }
 }
